--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES5",                  
+    "target": "es2015",     
+    "lib": ["es2015", "dom"],             
     "module": "none",                
     "rootDir": "./src",                    
     "outDir": "./dist",                    
